<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/fullscreen_background_selector">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player_1_cont"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            style="@style/player_text">
        </TextView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/player_1_add_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/plus_white"
                android:drawableLeft="@drawable/plus_white"
                android:clickable="true"
                android:onClick="incrementerClick">
            </TextView>

            <TextView
                android:id="@+id/player_1_add_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/player_1_add_one"
                android:text="@string/five"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/plus_white"
                android:drawableLeft="@drawable/plus_white"
                android:clickable="true"
                android:onClick="incrementerClick">

            </TextView>

            <TextView
                android:id="@+id/player_1_minus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_1_add_one"
                android:text="@string/one"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/minus_white"
                android:drawableLeft="@drawable/minus_white"
                android:clickable="true"
                android:onClick="incrementerClick">

            </TextView>

            <TextView
                android:id="@+id/player_1_minus_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/player_1_minus_one"
                android:layout_below="@id/player_1_add_five"
                android:text="@string/five"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/minus_white"
                android:drawableLeft="@drawable/minus_white"
                android:clickable="true"
                android:onClick="incrementerClick">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/player_1_life"
                android:text="@string/player_1_life"
                style="@style/player_life"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/player_1_cont"
        android:text="@string/player_2"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            style="@style/player_text">

        </TextView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/player_2_add_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/plus_white"
                android:drawableLeft="@drawable/plus_white"
                android:clickable="true"
                android:onClick="incrementerClick">

            </TextView>

            <TextView
                android:id="@+id/player_2_add_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/player_2_add_one"
                android:text="@string/five"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/plus_white"
                android:drawableLeft="@drawable/plus_white"
                android:clickable="true"
                android:onClick="incrementerClick">

            </TextView>

            <TextView
                android:id="@+id/player_2_minus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_2_add_one"
                android:text="@string/one"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/minus_white"
                android:drawableLeft="@drawable/minus_white"
                android:clickable="true"
                android:onClick="incrementerClick">

            </TextView>

            <TextView
                android:id="@+id/player_2_minus_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/player_2_minus_one"
                android:layout_below="@id/player_2_add_five"
                android:text="@string/five"
                style="@style/life_incrementer"
                android:drawableStart="@drawable/minus_white"
                android:drawableLeft="@drawable/minus_white"
                android:clickable="true"
                android:onClick="incrementerClick">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/player_2_life"
                android:text="@string/player_1_life"
                style="@style/player_life"/>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        android:src="@drawable/back_white"
        android:layout_alignParentBottom="true"
        android:onClick="onBackButtonClick"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forward_button"
        android:src="@drawable/forward_white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onForwardButtonClick"/>


</RelativeLayout>
